--- a/index.html
+++ b/index.html
@@ -7,6 +7,15 @@
     <title>Before I Forget</title>
     <link rel="stylesheet" href="style.css">
     <link rel="icon" type="image/png" href="assets/favicon.png">
+    <!-- Google tag (gtag.js) -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-FC4NJNVZZJ"></script>
+    <script>
+        window.dataLayer = window.dataLayer || [];
+        function gtag() { dataLayer.push(arguments); }
+        gtag('js', new Date());
+
+        gtag('config', 'G-FC4NJNVZZJ');
+    </script>
 </head>
 
 <body>
@@ -28,7 +37,20 @@
                     <li>Help</li>
                 </ul>
             </div>
-            <div class="text-area" id="text-area">Today I saw a new sunflower patch in the middle of the sidewalk on Hampshire. I have no idea how it appeared overnight. Went to the grocery store to get a singular orange. Cooked fried rice with leftovers. Just read an article that said if you have to swallow a frog today, do it first thing. If you have two, swallow the biggest frog first, and I love that phrasing! There are a few things I do daily now. I paint a small square of the sky each day. I read a poem each day. I feel impure when I put them on the todo list, after all, rituals shouldn't need checkboxes, no? Every poem this week has left me in tears. I want to write poems instead of just reading, I want to do research instead of just consuming. I want to create art instead of just being jealous. I must finish my readings. Then I must write my essay, then do my laundry, then call A, then make my returns, then go to pottery. That’s only like 5 things. I feel super overwhelmed and worried that I won't be able to be present when I'm with G because I'll be thinking so much about work. How has half a year passed by so quickly here? How did I end up in a place where time passes by so quickly? I want slowness where every day is full. I’ve been calling N every evening and I don’t tell her enough, but I love the company. It makes all the difference.
+            <div class="text-area" id="text-area">Today I saw a new sunflower patch in the middle of the sidewalk on
+                Hampshire. I have no idea how it appeared overnight. Went to the grocery store to get a singular orange.
+                Cooked fried rice with leftovers. Just read an article that said if you have to swallow a frog today, do
+                it first thing. If you have two, swallow the biggest frog first, and I love that phrasing! There are a
+                few things I do daily now. I paint a small square of the sky each day. I read a poem each day. I feel
+                impure when I put them on the todo list, after all, rituals shouldn't need checkboxes, no? Every poem
+                this week has left me in tears. I want to write poems instead of just reading, I want to do research
+                instead of just consuming. I want to create art instead of just being jealous. I must finish my
+                readings. Then I must write my essay, then do my laundry, then call A, then make my returns, then go to
+                pottery. That’s only like 5 things. I feel super overwhelmed and worried that I won't be able to be
+                present when I'm with G because I'll be thinking so much about work. How has half a year passed by so
+                quickly here? How did I end up in a place where time passes by so quickly? I want slowness where every
+                day is full. I’ve been calling N every evening and I don’t tell her enough, but I love the company. It
+                makes all the difference.
             </div>
 
         </div>
